   * Fixed the po extraction tool to also include the id field.
   * updated translations: Czech, Danish, Dutch, Finnish, French, Galician,
     German, Hungarian, Italian, Lithuanian, Polish, Slovak, Spanish
 * Terrain:
   * New graphic variations for Oasis (Dd^Do) terrain.
 * Unit changes and balancing:
   * Increased the cost of the Goblin Spearman from 8 to 9.
 * User interface:
   * Rewrote the layout algorithm for the new widgets.
   * Fixed the font loading when the data directory is overridden.
   * Removed text wrapping around background image in story screens; it is
     better to always use the whole screen width if possible (fixes the
     first story screens in Descent into Darkness and Under the Burning Suns).
   * Tweaked the algorithm that extends the darkened area below long
     story texts so that it gives a more consistent appearance.
   * Added a border and blurring to story screens' text blocks.
   * Improved wrapping in the new widgets.
   * Improved easy close handling.
   * Added a horizontal scrollbar widget.
   * Made the border scrolling threshold a (hidden) preference and made it
     default to 10 instead of 5 pixels.
 * WML engine:
   * Added the 'round' key to [set_variable].
   * It is possible to override the end-of-campaign screen text
     and its duration using end_text and end_text_duration attributes
     respectively, in [endlevel] or [campaign] tags. end_text_duration
     is measured in milliseconds. (feature #10449) 
 * Miscellaneous and bug fixes:
   * New memory allocator introduced to the engine. It should
     produce 5-10% savings in memory usage on 64-bit systems.
   * Included extra headers for certain g++ versions (patch #1113).
   * Fixed random memory corruption/assertion failure/massive leak due
     to story  screens.
   * Fixed [role] not working when no type was specified (bug #12660).

Version 1.5.6:
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit